cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj10_TupleStruct_1.plcfunc
FUNCTION proj10_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj10_TupleStruct_1 := tuple.field10;
END_FUNCTION
